[gd_scene load_steps=11 format=3 uid="uid://b2no1bnroh6lu"]

[ext_resource type="Script" uid="uid://dg41lq2aqismo" path="res://scripts/npc_scripts/examiner.gd" id="1_b8g66"]
[ext_resource type="Texture2D" uid="uid://dqxaypwrlmq1e" path="res://assets/sprites/knight.png" id="2_ayamd"]
[ext_resource type="FontFile" uid="uid://c0bgh10idc3tl" path="res://assets/fonts/PixelOperator8.ttf" id="3_2cidx"]
[ext_resource type="FontFile" uid="uid://dgcs33ctyhfl4" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_ayamd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gf5gu"]
atlas = ExtResource("2_ayamd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igoej"]
atlas = ExtResource("2_ayamd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cxkk"]
atlas = ExtResource("2_ayamd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjtwp"]
atlas = ExtResource("2_ayamd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ywvjc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf5gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igoej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cxkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjtwp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aggmx"]
size = Vector2(26, 20)

[node name="Examiner" type="Area2D"]
collision_mask = 2
script = ExtResource("1_b8g66")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ywvjc")
autoplay = "default"

[node name="InteractionZone" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_aggmx")

[node name="NameLabel" type="Label" parent="."]
offset_left = -38.0
offset_top = -31.0
offset_right = 38.0
offset_bottom = -23.0
theme_override_fonts/font = ExtResource("3_2cidx")
theme_override_font_sizes/font_size = 8
text = "Examiner"
horizontal_alignment = 1

[node name="Admin" type="Window" parent="."]
oversampling_override = 1.0
title = "Start your Journey!"
initial_position = 1
size = Vector2i(400, 200)
visible = false
unresizable = true
popup_window = true
minimize_disabled = true
maximize_disabled = true
theme_override_fonts/title_font = ExtResource("4_ayamd")

[node name="CameraWindow" type="Camera2D" parent="Admin"]
position = Vector2(200, 100)

[node name="NameLabel" type="Label" parent="Admin/CameraWindow"]
offset_left = -162.0
offset_top = -68.0
offset_right = -102.0
offset_bottom = -45.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Name"

[node name="PasswordLabel" type="Label" parent="Admin/CameraWindow"]
offset_left = 24.0
offset_top = -68.0
offset_right = 140.0
offset_bottom = -45.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Password"

[node name="NameField" type="LineEdit" parent="Admin/CameraWindow"]
offset_left = -162.0
offset_top = -38.0
offset_right = -12.0
offset_bottom = -7.0

[node name="PasswordField" type="LineEdit" parent="Admin/CameraWindow"]
offset_left = 24.0
offset_top = -38.0
offset_right = 174.0
offset_bottom = -7.0
secret = true

[node name="LoginBtn" type="Button" parent="Admin/CameraWindow"]
offset_left = -140.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 71.0
text = "Login"

[node name="CloseBtn" type="Button" parent="Admin/CameraWindow"]
offset_left = 40.0
offset_top = 40.0
offset_right = 140.0
offset_bottom = 71.0
text = "Not now"

[node name="ShowPasswordBtn" type="Button" parent="Admin/CameraWindow"]
offset_left = 143.0
offset_top = -38.0
offset_right = 174.0
offset_bottom = -7.0
theme_override_fonts/font = ExtResource("4_ayamd")
text = "-"

[node name="Menu" type="Window" parent="."]
oversampling_override = 1.0
title = "Question Form"
initial_position = 1
size = Vector2i(500, 200)
visible = false
theme_override_fonts/title_font = ExtResource("4_ayamd")

[node name="CameraWindow" type="Camera2D" parent="Menu"]
position = Vector2(250, 100)

[node name="Label" type="Label" parent="Menu/CameraWindow"]
offset_left = -143.0
offset_top = -68.0
offset_right = 143.0
offset_bottom = -52.0
pivot_offset = Vector2(143, 8)
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Select Question Type..."

[node name="GridContainer" type="GridContainer" parent="Menu/CameraWindow"]
offset_left = -198.0
offset_top = -16.0
offset_right = 198.0
offset_bottom = 48.0
pivot_offset = Vector2(198, 32)
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="MCBtn" type="Button" parent="Menu/CameraWindow/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Multiple Choice"

[node name="TFBtn" type="Button" parent="Menu/CameraWindow/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2cidx")
text = "True or False"

[node name="EnumBtn" type="Button" parent="Menu/CameraWindow/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Enumeration"

[node name="IdentifyBtn" type="Button" parent="Menu/CameraWindow/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Identification"

[node name="MultipleChoiceWindow" type="Window" parent="."]
oversampling_override = 1.0
title = "Multiple Choice"
initial_position = 1
size = Vector2i(500, 400)
visible = false
unresizable = true
popup_window = true
minimize_disabled = true
maximize_disabled = true
theme_override_fonts/title_font = ExtResource("4_ayamd")

[node name="CameraWindow" type="Camera2D" parent="MultipleChoiceWindow"]
position = Vector2(250, 200)

[node name="QuestionLabel" type="Label" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = -215.0
offset_top = -167.0
offset_right = -109.0
offset_bottom = -144.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Question"

[node name="ChoicesLabel" type="Label" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = -217.0
offset_top = -80.0
offset_right = -101.0
offset_bottom = -57.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Choices"

[node name="QuestionField" type="LineEdit" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = -215.0
offset_top = -137.0
offset_right = 205.0
offset_bottom = -106.0

[node name="Choices" type="ItemList" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = -192.0
offset_top = -39.0
offset_right = -152.0
offset_bottom = 97.0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
theme_override_fonts/font = ExtResource("4_ayamd")
item_count = 4
item_0/text = "A"
item_1/text = "B"
item_2/text = "C"
item_3/text = "D"

[node name="ChoiceFields" type="GridContainer" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = -145.0
offset_top = -39.0
offset_right = 205.0
offset_bottom = 97.0

[node name="AField" type="LineEdit" parent="MultipleChoiceWindow/CameraWindow/ChoiceFields"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BField" type="LineEdit" parent="MultipleChoiceWindow/CameraWindow/ChoiceFields"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CField" type="LineEdit" parent="MultipleChoiceWindow/CameraWindow/ChoiceFields"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DField" type="LineEdit" parent="MultipleChoiceWindow/CameraWindow/ChoiceFields"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubmitBtn" type="Button" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = -193.0
offset_top = 137.0
offset_right = -93.0
offset_bottom = 168.0
text = "Submit"

[node name="BackBtn" type="Button" parent="MultipleChoiceWindow/CameraWindow"]
offset_left = 92.0
offset_top = 137.0
offset_right = 192.0
offset_bottom = 168.0
text = "Go Back"

[node name="TrueOrFalseWindow" type="Window" parent="."]
oversampling_override = 1.0
title = "True or False"
initial_position = 1
size = Vector2i(500, 350)
visible = false
unresizable = true
popup_window = true
minimize_disabled = true
maximize_disabled = true
theme_override_fonts/title_font = ExtResource("4_ayamd")

[node name="CameraWindow" type="Camera2D" parent="TrueOrFalseWindow"]
position = Vector2(250, 175)

[node name="QuestionLabel" type="Label" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = -215.0
offset_top = -144.0
offset_right = -109.0
offset_bottom = -121.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Question"

[node name="ChoicesLabel" type="Label" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = -217.0
offset_top = -57.0
offset_right = -101.0
offset_bottom = -34.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Choices"

[node name="QuestionField" type="LineEdit" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = -215.0
offset_top = -114.0
offset_right = 205.0
offset_bottom = -83.0

[node name="Choices" type="ItemList" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = -192.0
offset_top = -16.0
offset_right = -152.0
offset_bottom = 50.0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 12
theme_override_fonts/font = ExtResource("4_ayamd")
item_count = 2
item_0/text = "T"
item_1/text = "F"

[node name="ChoiceFields" type="GridContainer" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = -145.0
offset_top = -16.0
offset_right = 205.0
offset_bottom = 120.0

[node name="TField" type="LineEdit" parent="TrueOrFalseWindow/CameraWindow/ChoiceFields"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FField" type="LineEdit" parent="TrueOrFalseWindow/CameraWindow/ChoiceFields"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubmitBtn" type="Button" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = -193.0
offset_top = 104.0
offset_right = -93.0
offset_bottom = 135.0
text = "Submit"

[node name="BackBtn" type="Button" parent="TrueOrFalseWindow/CameraWindow"]
offset_left = 92.0
offset_top = 104.0
offset_right = 192.0
offset_bottom = 135.0
text = "Go Back"

[node name="IdentificationWindow" type="Window" parent="."]
oversampling_override = 1.0
title = "Identification"
initial_position = 1
size = Vector2i(500, 300)
visible = false
unresizable = true
popup_window = true
minimize_disabled = true
maximize_disabled = true
theme_override_fonts/title_font = ExtResource("4_ayamd")

[node name="CameraWindow" type="Camera2D" parent="IdentificationWindow"]
position = Vector2(250, 150)

[node name="QuestionLabel" type="Label" parent="IdentificationWindow/CameraWindow"]
offset_left = -215.0
offset_top = -122.0
offset_right = -109.0
offset_bottom = -99.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Question"

[node name="AnswerLabel" type="Label" parent="IdentificationWindow/CameraWindow"]
offset_left = -217.0
offset_top = -35.0
offset_right = -101.0
offset_bottom = -12.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Answer"

[node name="QuestionField" type="LineEdit" parent="IdentificationWindow/CameraWindow"]
offset_left = -215.0
offset_top = -92.0
offset_right = 205.0
offset_bottom = -61.0

[node name="AnswerField" type="LineEdit" parent="IdentificationWindow/CameraWindow"]
offset_left = -215.0
offset_top = -5.0
offset_right = 205.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="SubmitBtn" type="Button" parent="IdentificationWindow/CameraWindow"]
offset_left = -193.0
offset_top = 79.0
offset_right = -93.0
offset_bottom = 110.0
text = "Submit"

[node name="BackBtn" type="Button" parent="IdentificationWindow/CameraWindow"]
offset_left = 92.0
offset_top = 79.0
offset_right = 192.0
offset_bottom = 110.0
text = "Go Back"

[node name="EnumerationWindow" type="Window" parent="."]
oversampling_override = 1.0
title = "Identification"
initial_position = 1
size = Vector2i(500, 500)
visible = false
unresizable = true
popup_window = true
minimize_disabled = true
maximize_disabled = true
theme_override_fonts/title_font = ExtResource("4_ayamd")

[node name="CameraWindow" type="Camera2D" parent="EnumerationWindow"]
position = Vector2(250, 250)

[node name="QuestionLabel" type="Label" parent="EnumerationWindow/CameraWindow"]
offset_left = -215.0
offset_top = -213.0
offset_right = -109.0
offset_bottom = -190.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Question"

[node name="AnswerLabel" type="Label" parent="EnumerationWindow/CameraWindow"]
offset_left = -217.0
offset_top = 69.0
offset_right = -101.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Answer"

[node name="ItemsLabel" type="Label" parent="EnumerationWindow/CameraWindow"]
offset_left = -217.0
offset_top = -130.0
offset_right = -101.0
offset_bottom = -107.0
theme_override_fonts/font = ExtResource("3_2cidx")
text = "Items"

[node name="QuestionField" type="LineEdit" parent="EnumerationWindow/CameraWindow"]
offset_left = -215.0
offset_top = -183.0
offset_right = 205.0
offset_bottom = -151.0
theme_override_fonts/font = ExtResource("3_2cidx")

[node name="AnswerField" type="LineEdit" parent="EnumerationWindow/CameraWindow"]
offset_left = -215.0
offset_top = 99.0
offset_right = 205.0
offset_bottom = 131.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_2cidx")

[node name="ItemsField" type="TextEdit" parent="EnumerationWindow/CameraWindow"]
offset_left = -215.0
offset_top = -99.0
offset_right = 205.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("3_2cidx")

[node name="SubmitBtn" type="Button" parent="EnumerationWindow/CameraWindow"]
offset_left = -193.0
offset_top = 178.0
offset_right = -93.0
offset_bottom = 209.0
text = "Submit"

[node name="BackBtn" type="Button" parent="EnumerationWindow/CameraWindow"]
offset_left = 92.0
offset_top = 178.0
offset_right = 192.0
offset_bottom = 209.0
text = "Go Back"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="close_requested" from="Admin" to="." method="_on_admin_close_requested"]
[connection signal="button_down" from="Admin/CameraWindow/LoginBtn" to="." method="_on_login_btn_button_down"]
[connection signal="button_down" from="Admin/CameraWindow/CloseBtn" to="." method="_on_close_btn_button_down"]
[connection signal="button_down" from="Admin/CameraWindow/ShowPasswordBtn" to="." method="_on_show_password_btn_button_down"]
